# simple_verif

./: README.md  dune-project  simple_verif.opam
lib/: Bexp.ml  DPLL.ml  EUF.ml  Formula.ml  MonadUtils.ml  StateMonad.ml  Theory.ml  Theory.mli  UninterpretedFunctions.ml  UninterpretedFunctions.mli  UnionFind.ml  UnionFind.mli  bexp_lexer.mll  bexp_parser.mly  dune
test/: dune
